# browsertrix_dataset_scraper

./: .gitignore  Cargo.toml  README.md  download_plugins.sh  urls.txt
chrome_plugins/bypass-paywalls-chrome-clean-v3.6.1.0/: README.md  background.js  changelog.txt  contentScript.js  contentScript_once.js  manifest.json  sites.js  sites_updated.json  updates.xml
chrome_plugins/bypass-paywalls-chrome-clean-v3.6.1.0/allowlist/: README.md
chrome_plugins/bypass-paywalls-chrome-clean-v3.6.1.0/custom/: manifest.json  sites_custom.json
chrome_plugins/bypass-paywalls-chrome-clean-v3.6.1.0/options/: options.html  options_custom.html  popup.html  version.js
chrome_plugins/uBlock0.chromium/: manifest.json
chrome_plugins/uBlock0.chromium/_locales/eu/: messages.json
src/: main.rs
